--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,19 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
+
+.container {
+	max-width: 100%;
+	padding: 0 1rem;
+}
+
+#root {
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
+}
+
+#root .content {
+	flex: 1 1 auto;
+	padding: 1rem 0;
+}
